--- a/src/chrome_ext/manifest.json
+++ b/src/chrome_ext/manifest.json
@@ -1,10 +1,13 @@
 {
-    "description": "Mouse hover one youtube video thumbnail to see more images for video",
+    "description": "__MSG_extensionDescription__",
     "icons": {
         "128": "ytpreview128.png",
         "48": "ytpreview48.png",
         "16": "ytpreview16.png"
     },
+	"web_accessible_resources": [
+		"ytpreview48.png"
+	],
     "background": {
         "scripts": [ "js/ytConst.js", "js/ytSettings.js", "js/background.js" ]
     },
@@ -22,8 +25,8 @@
         "default_popup": "popup.html"
     },
     "options_page": "site.html",
-    "name": "Youtube video preview",
-    "permissions": ["tabs", "unlimitedStorage", "http://gdata.youtube.com/*" ],
+    "name": "__MSG_extensionName__",
+    "permissions": ["tabs", "storage", "unlimitedStorage", "notifications", "http://gdata.youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*" ],
     "default_locale": "en",
     "version": "2.0.0",
     "manifest_version": 2,
