--- a/src/chrome_ext/manifest.json
+++ b/src/chrome_ext/manifest.json
@@ -26,7 +26,7 @@
     },
     "options_page": "site.html",
     "name": "__MSG_extensionName__",
-    "permissions": ["tabs", "storage", "unlimitedStorage", "notifications", "http://gdata.youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*" ],
+    "permissions": ["tabs", "storage", "http://gdata.youtube.com/*", "http://www.youtube.com/*", "https://www.youtube.com/*" ],
     "default_locale": "en",
     "version": "2.0.0",
     "manifest_version": 2,
