--- a/src/chrome_ext/manifest.json
+++ b/src/chrome_ext/manifest.json
@@ -9,7 +9,7 @@
 		"ytpreview48.png"
 	],
     "background": {
-        "scripts": [ "js/ytConst.js", "js/ytSettings.js", "js/background.js" ]
+        "scripts": [ "js/ytConst.js", "js/ytStorage.js", "js/ytSettings.js", "js/background.js" ]
     },
     "content_scripts": [
         {
