- update readme.md to contain link to FireFox extension; - version 0.1 of FireFox extension;

--- a/src/firefox_ext/package.json
+++ b/src/firefox_ext/package.json
@@ -2,6 +2,8 @@
     "name": "youtubevideopreview", 
     "fullName": "Youtube Video Preview",
     "description": "Youtube Video Preview",
+    "homepage": "https://github.com/darkyndy/YoutubeVideoPreview",
+    "icon": "ytpreview48.png",
     "license": "MPL 2.0", 
     "author": "Paul Comanici (darkyndy)", 
     "version": "0.1",  
