- improve rating preview performance; - rating preview now will work for video responses; - all properties will use "ytVideoPreview" as prefix; - rating previw element will be inserted in element with css class "video-thumb"

--- a/src/chrome_ext/manifest.json
+++ b/src/chrome_ext/manifest.json
@@ -13,6 +13,7 @@
     },
     "content_scripts": [
         {
+			"css": ["css/ytvpStyle.css"],
             "js": [ "js/ytConst.js", "js/dyDomHelper.js", "js/ytVideoPreview.js" ],
             "matches": [ "http://www.youtube.com/*", "https://www.youtube.com/*" ],
             "run_at": "document_end"
