--- a/src/chrome_ext/manifest.json
+++ b/src/chrome_ext/manifest.json
@@ -17,7 +17,6 @@
       "js": [
         "js/ytConst.js",
         "js/dyDomHelper.js",
-        "js/ajax.service.js",
         "js/dyUtils.js",
         "js/properties.service.js",
         "js/videoData.service.js",
@@ -35,9 +34,9 @@
   },
   "options_page": "site.html",
   "name": "__MSG_extensionName__",
-  "permissions": ["tabs", "storage", "https://www.youtube.com/*" ],
+  "permissions": ["tabs", "storage", "https://www.youtube.com/*", "https://www.googleapis.com/*" ],
   "default_locale": "en",
-  "version": "2.2.9",
+  "version": "2.3.0",
   "manifest_version": 2,
   "minimum_chrome_version": "20"
 }
